--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <a class="brand" href="index.html">Nikita Safonkin</a>
     <a class="active" href="index.html">Bio</a>
     <a href="papers.html">Papers</a>
-    <a href="talks.html">Talks</a>
+    <a href="other_writings.html">Other writings</a>
   </nav>
 </header>
 
