--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   <h2>Contact</h2>
   <div class="card">
     <p style="margin:0">
-      safonkin.nik (at) gmail.com ·
+      safonkin (dot) nik (at) gmail (dot) com ·
       <a href="https://arxiv.org/search/?searchtype=author&query=Safonkin%2C+N" target="_blank" rel="noopener">arXiv</a>
       · <a href="YOUR_CV_LINK_HERE" target="_blank" rel="noopener">CV</a>
     </p>
