--- a/papers.html
+++ b/papers.html
@@ -4,8 +4,155 @@
   <meta charset="utf-8"/>
   <meta name="viewport" content="width=device-width,initial-scale=1"/>
   <title>Papers · Nikita Safonkin</title>
-  <link rel="stylesheet" href="assets/style.css">
+
+  <style>
+    :root{
+      /* 🔥 Put your beloved accent color here (hex), e.g. #2aa198 */
+      --accent: #1155cc;
+
+      --bg: #fbfcfd;
+      --card: #ffffff;
+      --text: #111;
+      --muted: #555;
+      --border: rgba(0,0,0,.12);
+    }
+
+    *{ box-sizing: border-box; }
+    body{
+      margin: 0;
+      font-family: system-ui, -apple-system, Segoe UI, Roboto, sans-serif;
+      background: var(--bg);
+      color: var(--text);
+    }
+
+    .topbar{
+      position: sticky;
+      top: 0;
+      background: rgba(255,255,255,.9);
+      backdrop-filter: blur(10px);
+      border-bottom: 1px solid var(--border);
+    }
+    .nav{
+      max-width: 950px;
+      margin: 0 auto;
+      padding: 12px 18px;
+      display: flex;
+      gap: 12px;
+      flex-wrap: wrap;
+      align-items: center;
+    }
+    .brand{
+      font-weight: 750;
+      text-decoration: none;
+      color: var(--text);
+      margin-right: 10px;
+    }
+    .nav a{
+      text-decoration: none;
+      color: var(--muted);
+      padding: 6px 10px;
+      border-radius: 10px;
+    }
+    .nav a.active{
+      color: var(--accent);
+      border: 1px solid color-mix(in srgb, var(--accent) 35%, transparent);
+      background: color-mix(in srgb, var(--accent) 10%, white);
+    }
+
+    .wrap{
+      max-width: 950px;
+      margin: 0 auto;
+      padding: 26px 18px 60px;
+    }
+
+    .hero{
+      padding: 18px;
+      border-radius: 18px;
+      border: 1px solid color-mix(in srgb, var(--accent) 22%, transparent);
+      background: linear-gradient(135deg,
+        color-mix(in srgb, var(--accent) 12%, white),
+        white);
+    }
+    h1{ margin: 0 0 6px; font-size: 1.9rem; }
+    .sub{ color: var(--muted); }
+
+    .card{
+      margin-top: 16px;
+      background: var(--card);
+      border: 1px solid var(--border);
+      border-radius: 18px;
+      padding: 6px 18px;
+    }
+
+    ol.papers{
+      padding-left: 22px;
+      margin: 0;
+    }
+    li.paperitem{
+      margin: 16px 0;
+      padding: 14px 0;
+      border-bottom: 1px solid var(--border);
+    }
+    li.paperitem:last-child{ border-bottom: none; }
+
+    .paper-title{ font-weight: 750; }
+    .paper-authors{ margin-top: 4px; color: var(--muted); }
+    .paper-venue{ margin-top: 4px; color: var(--muted); }
+
+    .paper-links{
+      display: flex;
+      gap: 8px;
+      flex-wrap: wrap;
+      margin-top: 10px;
+      margin-bottom: 10px;
+    }
+
+    .pill{
+      display: inline-block;
+      padding: 7px 11px;
+      border-radius: 999px;
+      border: 1px solid var(--accent);
+      color: var(--accent);
+      background: transparent;
+      font: inherit;
+      font-size: .92rem;
+      line-height: 1;
+      cursor: pointer;
+      text-decoration: none;
+      user-select: none;
+    }
+    .pill:hover{ background: var(--accent); color: white; }
+
+    .pill.disabled{
+      opacity: .45;
+      cursor: default;
+      pointer-events: none;
+    }
+
+    .abstract{
+      margin-left: 2px;
+      margin-top: 10px;
+      margin-bottom: 4px;
+      border-left: 3px solid var(--accent);
+      padding-left: 12px;
+    }
+    .is-hidden{ display: none; }
+  </style>
+
+  <!-- MathJax (keeps your LaTeX in abstracts working) -->
+  <script>
+    window.MathJax = {
+      tex: {
+        macros: {
+          Bbbk: "{\\mathbb{k}}"
+        }
+      }
+    };
+  </script>
+  <script id="MathJax-script" async
+    src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
 </head>
+
 <body>
 
 <header class="topbar">
@@ -20,34 +167,37 @@
 <main class="wrap">
   <section class="hero">
     <h1>Papers</h1>
-    <div style="color: var(--muted);">Preprints, publications, and works in progress.</div>
+    <div class="sub">Buttons for Abstract / arXiv / PDF / Journal. Abstract toggles open/closed.</div>
   </section>
 
-  <div class="card" style="margin-top:16px">
+  <div class="card">
+    <ol class="papers" reversed>
 
-    <div class="paper">
-      <div class="paper-title">What is a double star-product?</div>
-      <div class="paper-meta">2025 · arXiv:2506.00699</div>
+      <li class="paperitem">
+        <div class="paper-title"><i>What is a double star-product?</i></div>
+        <div class="paper-authors">N. Safonkin</div>
+        <div class="paper-venue">(2025) · arXiv:2506.00699</div>
 
-      <div class="paper-links">
-        <button class="pill" type="button" data-toggle="abs-dsp">Abstract</button>
-        <a class="pill" href="https://arxiv.org/abs/2506.00699" target="_blank" rel="noopener">arXiv</a>
-        <a class="pill" href="https://arxiv.org/pdf/2506.00699.pdf" target="_blank" rel="noopener">PDF</a>
-        <a class="pill" href="JOURNAL_LINK_OR_DOI_HERE" target="_blank" rel="noopener">Journal</a>
-      </div>
+        <div class="paper-links">
+          <button class="pill" type="button" data-toggle="abs-1">Abstract</button>
+          <a class="pill" href="https://arxiv.org/abs/2506.00699" target="_blank" rel="noopener noreferrer">arXiv</a>
+          <a class="pill" href="https://arxiv.org/pdf/2506.00699.pdf" target="_blank" rel="noopener noreferrer">PDF</a>
+          <a class="pill disabled" href="#" aria-disabled="true">Journal</a>
+        </div>
 
-      <div id="abs-dsp" class="abstract is-hidden">
-        <p>
-          Paste the abstract here.
-        </p>
-      </div>
-    </div>
+        <div id="abs-1" class="abstract is-hidden">
+          <p><i>Abstract:</i> Double Poisson brackets, introduced by M. Van den Bergh in 2004, are noncommutative analogs of the usual Poisson brackets in the sense of the Kontsevich–Rosenberg principle: they induce Poisson structures on the space of \( N \)-dimensional representations \( \mathrm{Rep}_N(A) \) of an associative algebra \( A \) for any \( N \). The problem of deformation quantization of double Poisson brackets was raised by D. Calaque in 2010, and had remained open since then.</p>
 
-    <!-- Copy/paste another .paper block for each paper -->
+          <p>In this paper, we address this problem by answering the question in the title. We present a structure on \( A \) that induces a star-product under the representation functor and, therefore, according to the Kontsevich–Rosenberg principle, can be viewed as an analog of star-products in noncommutative geometry. We also provide an explicit example for \( A = \Bbbk\langle x_1, \ldots, x_d \rangle \) and prove a double formality theorem in this case. Along the way, we invert the Kontsevich–Rosenberg principle by introducing the notion of a double algebra over an arbitrary operad.</p>
+        </div>
+      </li>
 
-  </div>
-</main>
+      <li class="paperitem">
+        <div class="paper-title"><i>Double Poisson brackets and involutive representation spaces</i></div>
+        <div class="paper-authors">G. Olshanski, N. Safonkin</div>
+        <div class="paper-venue">Letters in Mathematical Physics 114, 33 (2024) · arXiv:2310.01086</div>
 
-<script src="assets/site.js"></script>
-</body>
-</html>
+        <div class="paper-links">
+          <button class="pill" type="button" data-toggle="abs-2">Abstract</button>
+          <a class="pill" href="https://arxiv.org/abs/2310.01086" target="_blank" rel="noopener noreferrer">arXiv</a>
+          <a class="pill" href="https://arxiv.org/pdf/2310.01086.pdf" target="_blank" rel="noopener noreferrer">PDF</a>
