--- a/papers.html
+++ b/papers.html
@@ -201,3 +201,133 @@
           <button class="pill" type="button" data-toggle="abs-2">Abstract</button>
           <a class="pill" href="https://arxiv.org/abs/2310.01086" target="_blank" rel="noopener noreferrer">arXiv</a>
           <a class="pill" href="https://arxiv.org/pdf/2310.01086.pdf" target="_blank" rel="noopener noreferrer">PDF</a>
+          <a class="pill disabled" href="#" aria-disabled="true">Journal</a>
+        </div>
+
+        <div id="abs-2" class="abstract is-hidden">
+          <p><i>Abstract:</i> Let \( \Bbbk \) be an algebraically closed field of characteristic \( 0 \) and \( A \) be a finitely generated associative \( \Bbbk \)-algebra, in general noncommutative. One assigns to \( A \) a sequence of commutative \( \Bbbk \)-algebras \( \mathcal{O}(A,d) \), \( d = 1, 2, 3, \dots \), where \( \mathcal{O}(A,d) \) is the coordinate ring of the space \( \operatorname{Rep}(A,d) \) of \( d \)-dimensional representations of the algebra \( A \). A <em>double Poisson bracket</em> on \( A \) in the sense of Van den Bergh is a bilinear map \( \{\!\!\{-,-\}\!\!\} \colon A \times A \to A \otimes A \), subject to certain conditions. Van den Bergh showed that any such bracket \( \{\!\!\{-,-\}\!\!\} \) induces Poisson structures on all algebras \( \mathcal{O}(A,d) \).</p>
+
+          <p>We propose an analog of Van den Bergh's construction, which produces Poisson structures on the coordinate rings of certain subspaces of the representation spaces \( \operatorname{Rep}(A,d) \). We call these subspaces the <em>involutive</em> representation spaces. They arise by imposing an additional symmetry condition on \( \operatorname{Rep}(A,d) \) — just as the classical groups from the series B, C, D are obtained from the general linear groups (series A) as fixed point sets of involutive automorphisms.</p>
+        </div>
+      </li>
+
+      <li class="paperitem">
+        <div class="paper-title"><i>Remarks on Yangian-Type Algebras and Double Poisson Brackets</i></div>
+        <div class="paper-authors">G. Olshanski, N. Safonkin</div>
+        <div class="paper-venue">Functional Analysis and Its Applications 57, 326–336 (2023) · arXiv:2308.13325</div>
+
+        <div class="paper-links">
+          <button class="pill" type="button" data-toggle="abs-3">Abstract</button>
+          <a class="pill" href="https://arxiv.org/abs/2308.13325" target="_blank" rel="noopener noreferrer">arXiv</a>
+          <a class="pill" href="https://arxiv.org/pdf/2308.13325.pdf" target="_blank" rel="noopener noreferrer">PDF</a>
+          <a class="pill disabled" href="#" aria-disabled="true">Journal</a>
+        </div>
+
+        <div id="abs-3" class="abstract is-hidden">
+          <p><i>Abstract:</i> This short note is an announcement of results. We continue the study of Yangian-type algebras initiated by the first author. These algebras share a number of properties of the Yangians of type A but are more massive. We refine and substantially enlarge the known construction. A direct link with the class of linear double Poisson brackets on the free associative algebras (Pichereau and Van de Weyer, 2008) is also established.</p>
+        </div>
+      </li>
+
+      <li class="paperitem">
+        <div class="paper-title"><i>Semifinite harmonic functions on the direct product of graded graphs</i></div>
+        <div class="paper-authors">P. Nikitin, N. Safonkin</div>
+        <div class="paper-venue">Zapiski Nauchnykh Seminarov POMI 517, 125–150 (2022) · arXiv:2209.05901</div>
+
+        <div class="paper-links">
+          <button class="pill" type="button" data-toggle="abs-4">Abstract</button>
+          <a class="pill" href="https://arxiv.org/abs/2209.05901" target="_blank" rel="noopener noreferrer">arXiv</a>
+          <a class="pill" href="https://arxiv.org/pdf/2209.05901.pdf" target="_blank" rel="noopener noreferrer">PDF</a>
+          <a class="pill disabled" href="#" aria-disabled="true">Journal</a>
+        </div>
+
+        <div id="abs-4" class="abstract is-hidden">
+          <p><i>Abstract:</i> Indecomposable semifinite harmonic functions on the direct product of graded graphs are classified. As a particular case, the full list of indecomposable traces for the infinite inverse symmetric semigroup is obtained.</p>
+        </div>
+      </li>
+
+      <li class="paperitem">
+        <div class="paper-title"><i>Semifinite harmonic functions on the zigzag graph</i></div>
+        <div class="paper-authors">N. Safonkin</div>
+        <div class="paper-venue">Functional Analysis and Its Applications 56:3, 52–74 (2022) · arXiv:2110.01508</div>
+
+        <div class="paper-links">
+          <button class="pill" type="button" data-toggle="abs-5">Abstract</button>
+          <a class="pill" href="https://arxiv.org/abs/2110.01508" target="_blank" rel="noopener noreferrer">arXiv</a>
+          <a class="pill" href="https://arxiv.org/pdf/2110.01508.pdf" target="_blank" rel="noopener noreferrer">PDF</a>
+          <a class="pill disabled" href="#" aria-disabled="true">Journal</a>
+        </div>
+
+        <div id="abs-5" class="abstract is-hidden">
+          <p><i>Abstract:</i> We study semifinite harmonic functions on the zigzag graph, which corresponds to Pieri's rule for the fundamental quasisymmetric functions \( \{F_{\lambda}\} \). The main problem, which we solve here, is to classify the indecomposable semifinite harmonic functions on this graph. We describe the set of classification parameters and an explicit construction that produces a semifinite indecomposable harmonic function out of every point of this set. We also establish a semifinite analog of the Vershik–Kerov ring theorem.</p>
+        </div>
+      </li>
+
+      <li class="paperitem">
+        <div class="paper-title"><i>Semifinite Harmonic Functions on Branching Graphs</i></div>
+        <div class="paper-authors">N. Safonkin</div>
+        <div class="paper-venue">Journal of Mathematical Sciences (New York) 261, 669–686 (2022) · arXiv:2108.07850</div>
+
+        <div class="paper-links">
+          <button class="pill" type="button" data-toggle="abs-6">Abstract</button>
+          <a class="pill" href="https://arxiv.org/abs/2108.07850" target="_blank" rel="noopener noreferrer">arXiv</a>
+          <a class="pill" href="https://arxiv.org/pdf/2108.07850.pdf" target="_blank" rel="noopener noreferrer">PDF</a>
+          <a class="pill disabled" href="#" aria-disabled="true">Journal</a>
+        </div>
+
+        <div id="abs-6" class="abstract is-hidden">
+          <p><i>Abstract:</i> We study semifinite harmonic functions on arbitrary branching graphs. We give a detailed exposition of an algebraic method which allows one to classify semifinite indecomposable harmonic functions on some multiplicative branching graphs. This method was proposed by A. Wassermann in terms of operator algebras, while we rephrase, clarify, and simplify the main arguments, working only with combinatorial objects. This work was inspired by the theory of traceable factor representations of the infinite symmetric group \( S(\infty) \).</p>
+        </div>
+      </li>
+
+      <li class="paperitem">
+        <div class="paper-title"><i>Semifinite Harmonic Functions on the Gnedin–Kingman Graph</i></div>
+        <div class="paper-authors">N. Safonkin</div>
+        <div class="paper-venue">Journal of Mathematical Sciences (New York) 255, 132–142 (2021) · arXiv:2103.02257</div>
+
+        <div class="paper-links">
+          <button class="pill" type="button" data-toggle="abs-7">Abstract</button>
+          <a class="pill" href="https://arxiv.org/abs/2103.02257" target="_blank" rel="noopener noreferrer">arXiv</a>
+          <a class="pill" href="https://arxiv.org/pdf/2103.02257.pdf" target="_blank" rel="noopener noreferrer">PDF</a>
+          <a class="pill disabled" href="#" aria-disabled="true">Journal</a>
+        </div>
+
+        <div id="abs-7" class="abstract is-hidden">
+          <p><i>Abstract:</i> We study the Gnedin–Kingman graph, which corresponds to Pieri's rule for the monomial basis \( \{M_{\lambda}\} \) in the algebra \( \mathrm{QSym} \) of quasisymmetric functions. The paper contains a detailed announcement of results concerning the classification of indecomposable semifinite harmonic functions on the Gnedin–Kingman graph. For these functions, we also establish a multiplicativity property, which is an analog of the Vershik–Kerov ring theorem.</p>
+        </div>
+      </li>
+
+      <li class="paperitem">
+        <div class="paper-title"><i>Classification of Certain Class of Ordinary Differential Equations of the First Order</i></div>
+        <div class="paper-authors">P. Bibikov, N. Safonkin</div>
+        <div class="paper-venue">Russian Mathematics 62 (2018)</div>
+
+        <div class="paper-links">
+          <button class="pill" type="button" data-toggle="abs-8">Abstract</button>
+          <a class="pill disabled" href="#" aria-disabled="true">arXiv</a>
+          <a class="pill disabled" href="#" aria-disabled="true">PDF</a>
+          <a class="pill disabled" href="#" aria-disabled="true">Journal</a>
+        </div>
+
+        <div id="abs-8" class="abstract is-hidden">
+          <p><i>Abstract:</i> We study problem of global classification of ordinary differential equations with the linear-fractional right-hand side with rational coefficients with respect to a symmetry group. We find the field of differential invariants and obtain the equivalence criterion for two such equations.</p>
+        </div>
+      </li>
+
+    </ol>
+  </div>
+</main>
+
+<script>
+  // Abstract toggle
+  document.addEventListener("click", (e) => {
+    const btn = e.target.closest("[data-toggle]");
+    if (!btn) return;
+    const id = btn.getAttribute("data-toggle");
+    const box = document.getElementById(id);
+    if (!box) return;
+    box.classList.toggle("is-hidden");
+  });
+</script>
+
+</body>
+</html>
