--- a/papers.html
+++ b/papers.html
@@ -160,7 +160,7 @@
     <a class="brand" href="index.html">Nikita Safonkin</a>
     <a href="index.html">Bio</a>
     <a class="active" href="papers.html">Papers</a>
-    <a href="talks.html">Talks</a>
+    <a href="other_writings.html">Other Writings</a>
   </nav>
 </header>
 
