--- a/papers.html
+++ b/papers.html
@@ -143,9 +143,7 @@
   <script>
     window.MathJax = {
       tex: {
-        macros: {
-          Bbbk: "{\\mathbb{k}}"
-        }
+        macros: { Bbbk: "{\\mathbb{k}}" }
       }
     };
   </script>
@@ -186,7 +184,7 @@
         </div>
 
         <div id="abs-1" class="abstract is-hidden">
-          <p><i>Abstract:</i> Double Poisson brackets, introduced by M. Van den Bergh in 2004, are noncommutative analogs of the usual Poisson brackets in the sense of the Kontsevich–Rosenberg principle: they induce Poisson structures on the space of \( N \)-dimensional representations \( \mathrm{Rep}_N(A) \) of an associative algebra \( A \) for any \( N \). The problem of deformation quantization of double Poisson brackets was raised by D. Calaque in 2010, and had remained open since then.</p>
+          <p>Double Poisson brackets, introduced by M. Van den Bergh in 2004, are noncommutative analogs of the usual Poisson brackets in the sense of the Kontsevich–Rosenberg principle: they induce Poisson structures on the space of \( N \)-dimensional representations \( \mathrm{Rep}_N(A) \) of an associative algebra \( A \) for any \( N \). The problem of deformation quantization of double Poisson brackets was raised by D. Calaque in 2010, and had remained open since then.</p>
 
           <p>In this paper, we address this problem by answering the question in the title. We present a structure on \( A \) that induces a star-product under the representation functor and, therefore, according to the Kontsevich–Rosenberg principle, can be viewed as an analog of star-products in noncommutative geometry. We also provide an explicit example for \( A = \Bbbk\langle x_1, \ldots, x_d \rangle \) and prove a double formality theorem in this case. Along the way, we invert the Kontsevich–Rosenberg principle by introducing the notion of a double algebra over an arbitrary operad.</p>
         </div>
@@ -205,7 +203,7 @@
         </div>
 
         <div id="abs-2" class="abstract is-hidden">
-          <p><i>Abstract:</i> Let \( \Bbbk \) be an algebraically closed field of characteristic \( 0 \) and \( A \) be a finitely generated associative \( \Bbbk \)-algebra, in general noncommutative. One assigns to \( A \) a sequence of commutative \( \Bbbk \)-algebras \( \mathcal{O}(A,d) \), \( d = 1, 2, 3, \dots \), where \( \mathcal{O}(A,d) \) is the coordinate ring of the space \( \operatorname{Rep}(A,d) \) of \( d \)-dimensional representations of the algebra \( A \). A <em>double Poisson bracket</em> on \( A \) in the sense of Van den Bergh is a bilinear map \( \{\!\!\{-,-\}\!\!\} \colon A \times A \to A \otimes A \), subject to certain conditions. Van den Bergh showed that any such bracket \( \{\!\!\{-,-\}\!\!\} \) induces Poisson structures on all algebras \( \mathcal{O}(A,d) \).</p>
+          <p>Let \( \Bbbk \) be an algebraically closed field of characteristic \( 0 \) and \( A \) be a finitely generated associative \( \Bbbk \)-algebra, in general noncommutative. One assigns to \( A \) a sequence of commutative \( \Bbbk \)-algebras \( \mathcal{O}(A,d) \), \( d = 1, 2, 3, \dots \), where \( \mathcal{O}(A,d) \) is the coordinate ring of the space \( \operatorname{Rep}(A,d) \) of \( d \)-dimensional representations of the algebra \( A \). A <em>double Poisson bracket</em> on \( A \) in the sense of Van den Bergh is a bilinear map \( \{\!\!\{-,-\}\!\!\} \colon A \times A \to A \otimes A \), subject to certain conditions. Van den Bergh showed that any such bracket \( \{\!\!\{-,-\}\!\!\} \) induces Poisson structures on all algebras \( \mathcal{O}(A,d) \).</p>
 
           <p>We propose an analog of Van den Bergh's construction, which produces Poisson structures on the coordinate rings of certain subspaces of the representation spaces \( \operatorname{Rep}(A,d) \). We call these subspaces the <em>involutive</em> representation spaces. They arise by imposing an additional symmetry condition on \( \operatorname{Rep}(A,d) \) — just as the classical groups from the series B, C, D are obtained from the general linear groups (series A) as fixed point sets of involutive automorphisms.</p>
         </div>
@@ -224,7 +222,7 @@
         </div>
 
         <div id="abs-3" class="abstract is-hidden">
-          <p><i>Abstract:</i> This short note is an announcement of results. We continue the study of Yangian-type algebras initiated by the first author. These algebras share a number of properties of the Yangians of type A but are more massive. We refine and substantially enlarge the known construction. A direct link with the class of linear double Poisson brackets on the free associative algebras (Pichereau and Van de Weyer, 2008) is also established.</p>
+          <p>This short note is an announcement of results. We continue the study of Yangian-type algebras initiated by the first author. These algebras share a number of properties of the Yangians of type A but are more massive. We refine and substantially enlarge the known construction. A direct link with the class of linear double Poisson brackets on the free associative algebras (Pichereau and Van de Weyer, 2008) is also established.</p>
         </div>
       </li>
 
@@ -241,7 +239,7 @@
         </div>
 
         <div id="abs-4" class="abstract is-hidden">
-          <p><i>Abstract:</i> Indecomposable semifinite harmonic functions on the direct product of graded graphs are classified. As a particular case, the full list of indecomposable traces for the infinite inverse symmetric semigroup is obtained.</p>
+          <p>Indecomposable semifinite harmonic functions on the direct product of graded graphs are classified. As a particular case, the full list of indecomposable traces for the infinite inverse symmetric semigroup is obtained.</p>
         </div>
       </li>
 
@@ -258,7 +256,7 @@
         </div>
 
         <div id="abs-5" class="abstract is-hidden">
-          <p><i>Abstract:</i> We study semifinite harmonic functions on the zigzag graph, which corresponds to Pieri's rule for the fundamental quasisymmetric functions \( \{F_{\lambda}\} \). The main problem, which we solve here, is to classify the indecomposable semifinite harmonic functions on this graph. We describe the set of classification parameters and an explicit construction that produces a semifinite indecomposable harmonic function out of every point of this set. We also establish a semifinite analog of the Vershik–Kerov ring theorem.</p>
+          <p>We study semifinite harmonic functions on the zigzag graph, which corresponds to Pieri's rule for the fundamental quasisymmetric functions \( \{F_{\lambda}\} \). The main problem, which we solve here, is to classify the indecomposable semifinite harmonic functions on this graph. We describe the set of classification parameters and an explicit construction that produces a semifinite indecomposable harmonic function out of every point of this set. We also establish a semifinite analog of the Vershik–Kerov ring theorem.</p>
         </div>
       </li>
 
@@ -275,7 +273,7 @@
         </div>
 
         <div id="abs-6" class="abstract is-hidden">
-          <p><i>Abstract:</i> We study semifinite harmonic functions on arbitrary branching graphs. We give a detailed exposition of an algebraic method which allows one to classify semifinite indecomposable harmonic functions on some multiplicative branching graphs. This method was proposed by A. Wassermann in terms of operator algebras, while we rephrase, clarify, and simplify the main arguments, working only with combinatorial objects. This work was inspired by the theory of traceable factor representations of the infinite symmetric group \( S(\infty) \).</p>
+          <p>We study semifinite harmonic functions on arbitrary branching graphs. We give a detailed exposition of an algebraic method which allows one to classify semifinite indecomposable harmonic functions on some multiplicative branching graphs. This method was proposed by A. Wassermann in terms of operator algebras, while we rephrase, clarify, and simplify the main arguments, working only with combinatorial objects. This work was inspired by the theory of traceable factor representations of the infinite symmetric group \( S(\infty) \).</p>
         </div>
       </li>
 
@@ -292,7 +290,7 @@
         </div>
 
         <div id="abs-7" class="abstract is-hidden">
-          <p><i>Abstract:</i> We study the Gnedin–Kingman graph, which corresponds to Pieri's rule for the monomial basis \( \{M_{\lambda}\} \) in the algebra \( \mathrm{QSym} \) of quasisymmetric functions. The paper contains a detailed announcement of results concerning the classification of indecomposable semifinite harmonic functions on the Gnedin–Kingman graph. For these functions, we also establish a multiplicativity property, which is an analog of the Vershik–Kerov ring theorem.</p>
+          <p>We study the Gnedin–Kingman graph, which corresponds to Pieri's rule for the monomial basis \( \{M_{\lambda}\} \) in the algebra \( \mathrm{QSym} \) of quasisymmetric functions. The paper contains a detailed announcement of results concerning the classification of indecomposable semifinite harmonic functions on the Gnedin–Kingman graph. For these functions, we also establish a multiplicativity property, which is an analog of the Vershik–Kerov ring theorem.</p>
         </div>
       </li>
 
@@ -309,7 +307,7 @@
         </div>
 
         <div id="abs-8" class="abstract is-hidden">
-          <p><i>Abstract:</i> We study problem of global classification of ordinary differential equations with the linear-fractional right-hand side with rational coefficients with respect to a symmetry group. We find the field of differential invariants and obtain the equivalence criterion for two such equations.</p>
+          <p>We study problem of global classification of ordinary differential equations with the linear-fractional right-hand side with rational coefficients with respect to a symmetry group. We find the field of differential invariants and obtain the equivalence criterion for two such equations.</p>
         </div>
       </li>
 
