--- a/papers.html
+++ b/papers.html
@@ -85,15 +85,21 @@
     }
 
     ol.papers{
-      padding-left: 22px;
-      margin: 0;
-    }
-    li.paperitem{
-      margin: 16px 0;
-      padding: 14px 0;
-      border-bottom: 1px solid var(--border);
-    }
-    li.paperitem:last-child{ border-bottom: none; }
+  list-style: none;
+  padding-left: 0;
+  margin: 0;
+}
+
+li.paperitem{
+  margin: 14px 0;
+  padding: 14px 16px;
+  border: 1px solid var(--border);
+  border-radius: 16px;
+  background: var(--card);
+}
+
+li.paperitem:last-child{ border-bottom: 1px solid var(--border); } /* harmless */
+
 
     .paper-title{ font-weight: 750; }
     .paper-authors{ margin-top: 4px; color: var(--muted); }
