--- a/index.html
+++ b/index.html
@@ -4,8 +4,155 @@
   <meta charset="utf-8"/>
   <meta name="viewport" content="width=device-width,initial-scale=1"/>
   <title>Nikita Safonkin</title>
-  <link rel="stylesheet" href="assets/style.css">
+
+  <style>
+    :root{
+      --accent: #1155cc;   /* set to your любимый цвет */
+      --bg: #fbfcfd;
+      --card: #ffffff;
+      --text: #111;
+      --muted: #555;
+      --border: rgba(0,0,0,.12);
+    }
+
+    *{ box-sizing: border-box; }
+    html{ scrollbar-gutter: stable; }
+
+    body{
+      margin: 0;
+      font-family: system-ui, -apple-system, Segoe UI, Roboto, sans-serif;
+      background: var(--bg);
+      color: var(--text);
+    }
+
+    .topbar{
+      position: sticky;
+      top: 0;
+      background: rgba(255,255,255,.9);
+      backdrop-filter: blur(10px);
+      border-bottom: 1px solid var(--border);
+      z-index: 10;
+    }
+
+    .nav{
+      max-width: 900px;
+      margin: 0 auto;
+      padding: 12px 18px;
+      display: flex;
+      gap: 12px;
+      flex-wrap: wrap;
+      align-items: center;
+    }
+
+    .brand{
+      font-weight: 750;
+      text-decoration: none;
+      color: var(--text);
+      margin-right: 10px;
+    }
+
+    .nav a{
+      text-decoration: none;
+      color: var(--muted);
+      padding: 6px 10px;
+      border-radius: 10px;
+    }
+
+    .nav a.active{
+      color: var(--accent);
+      border: 1px solid color-mix(in srgb, var(--accent) 35%, transparent);
+      background: color-mix(in srgb, var(--accent) 10%, white);
+    }
+
+    .wrap{
+      max-width: 900px;
+      margin: 0 auto;
+      padding: 26px 18px 60px;
+    }
+
+    .card{
+      background: var(--card);
+      border: 1px solid var(--border);
+      border-radius: 18px;
+      padding: 16px 18px;
+    }
+
+    /* Hero with photo */
+    .hero{
+      border-radius: 18px;
+      border: 1px solid color-mix(in srgb, var(--accent) 22%, transparent);
+      background: linear-gradient(135deg,
+        color-mix(in srgb, var(--accent) 12%, white),
+        white);
+      padding: 18px;
+    }
+
+    .hero-grid{
+      display: grid;
+      grid-template-columns: 1.35fr .85fr;
+      gap: 18px;
+      align-items: start;
+    }
+
+    @media (max-width: 800px){
+      .hero-grid{ grid-template-columns: 1fr; }
+    }
+
+    h1{ margin: 0 0 6px; font-size: 1.9rem; }
+    .sub{ color: var(--muted); line-height: 1.45; }
+
+    .photo{
+      width: 100%;
+      aspect-ratio: 4 / 5;
+      border-radius: 16px;
+      border: 1px solid var(--border);
+      overflow: hidden;
+      background: rgba(0,0,0,.03);
+    }
+
+    .photo img{
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+      display: block;
+    }
+
+    h2{ margin: 22px 0 10px; font-size: 1.2rem; }
+
+    .contact-grid{
+      display: grid;
+      grid-template-columns: 1fr 1fr;
+      gap: 10px 18px;
+    }
+
+    @media (max-width: 700px){
+      .contact-grid{ grid-template-columns: 1fr; }
+    }
+
+    .label{ color: var(--muted); font-size: .95rem; }
+    .value a{ color: var(--accent); text-decoration: none; }
+    .value a:hover{ text-decoration: underline; }
+
+    .pill{
+      display: inline-block;
+      padding: 7px 11px;
+      border-radius: 999px;
+      border: 1px solid var(--accent);
+      color: var(--accent);
+      background: transparent;
+      font: inherit;
+      font-size: .92rem;
+      line-height: 1;
+      cursor: pointer;
+      text-decoration: none;
+      user-select: none;
+      margin-right: 8px;
+      margin-top: 8px;
+    }
+    .pill:hover{ background: var(--accent); color: white; }
+  </style>
 </head>
+
 <body>
 
 <header class="topbar">
@@ -13,43 +160,71 @@
     <a class="brand" href="index.html">Nikita Safonkin</a>
     <a class="active" href="index.html">Bio</a>
     <a href="papers.html">Papers</a>
-    <a href="other_writings.html">Other writings</a>
+    <a href="other_writings.html">Other Writings</a>
   </nav>
 </header>
 
 <main class="wrap">
+
   <section class="hero">
-    <h1>Nikita Safonkin</h1>
-    <div style="color: var(--muted);">
-      Postdoctoral Researcher · Institute of Mathematics · Leipzig University
+    <div class="hero-grid">
+      <div>
+        <h1>Nikita Safonkin</h1>
+        <div class="sub">
+          Postdoctoral researcher in mathematics (Leipzig University).<br/>
+          Noncommutative geometry, representation theory, Poisson structures, deformation/quantization.
+        </div>
+
+        <div>
+          <a class="pill" href="papers.html">Papers</a>
+          <a class="pill" href="YOUR_CV_LINK_HERE" target="_blank" rel="noopener">CV</a>
+          <a class="pill" href="https://arxiv.org/search/?searchtype=author&query=Safonkin%2C+N" target="_blank" rel="noopener">arXiv</a>
+        </div>
+      </div>
+
+      <div class="photo">
+        <!-- Put your photo at assets/me.jpg -->
+        <img src="assets/me.jpg" alt="Photo of Nikita Safonkin"
+             onerror="this.remove(); this.parentElement.style.display='grid'; this.parentElement.style.placeItems='center'; this.parentElement.innerHTML='<div style=&quot;color: var(--muted); padding: 18px; text-align:center;&quot;>Add your photo as <b>assets/me.jpg</b></div>';">
+      </div>
     </div>
   </section>
 
   <h2>Contact</h2>
-  <div class="card">
-    <p style="margin:0">
-      safonkin (dot) nik (at) gmail (dot) com ·
-      <a href="https://arxiv.org/search/?searchtype=author&query=Safonkin%2C+N" target="_blank" rel="noopener">arXiv</a>
-      · <a href="YOUR_CV_LINK_HERE" target="_blank" rel="noopener">CV</a>
-    </p>
-  </div>
+  <section class="card">
+    <div class="contact-grid">
+      <div>
+        <div class="label">Email</div>
+        <div class="value"><a href="mailto:safonkin.nik@gmail.com">safonkin.nik@gmail.com</a></div>
+      </div>
+      <div>
+        <div class="label">Affiliation</div>
+        <div class="value">Leipzig University</div>
+      </div>
+      <div>
+        <div class="label">Office</div>
+        <div class="value">Add office / building (optional)</div>
+      </div>
+      <div>
+        <div class="label">Links</div>
+        <div class="value">
+          <a href="https://www.nikita-safonkin.com" target="_blank" rel="noopener">Old site</a> ·
+          <a href="https://github.com/YOUR_GITHUB_USERNAME" target="_blank" rel="noopener">GitHub</a> ·
+          <a href="https://scholar.google.com" target="_blank" rel="noopener">Google Scholar</a>
+        </div>
+      </div>
+    </div>
+  </section>
 
-  <h2>Research interests</h2>
-  <div class="card">
-    <p style="margin:0">
-      representation theory · noncommutative geometry · Poisson structures · algebraic combinatorics
+  <h2>Short bio</h2>
+  <section class="card">
+    <p style="margin:0; line-height:1.55">
+      Paste your bio here (copy from Google Sites). Keep it 5–10 lines: who you are, what you work on,
+      and what you’re currently excited about.
     </p>
-  </div>
+  </section>
 
-  <h2>Bio</h2>
-  <div class="card">
-    <p>
-      Paste your bio text here (copy from Google Sites). This is just normal text now — no widgets, no weird editor.
-    </p>
-  </div>
 </main>
 
-<script src="assets/site.js"></script>
 </body>
 </html>
-
