--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
   <style>
     :root{
-      --accent: #1155cc;   /* set to your любимый цвет */
+      --accent: #1155cc;   /* <-- set your любимый цвет here */
       --bg: #fbfcfd;
       --card: #ffffff;
       --text: #111;
@@ -70,14 +70,17 @@
       padding: 26px 18px 60px;
     }
 
-    .card{
-      background: var(--card);
-      border: 1px solid var(--border);
-      border-radius: 18px;
-      padding: 16px 18px;
+    .home-grid{
+      display: grid;
+      grid-template-columns: 1.2fr 0.8fr; /* left contact wider */
+      gap: 18px;
+      align-items: start;
     }
 
-    /* Hero with photo */
+    @media (max-width: 850px){
+      .home-grid{ grid-template-columns: 1fr; }
+    }
+
     .hero{
       border-radius: 18px;
       border: 1px solid color-mix(in srgb, var(--accent) 22%, transparent);
@@ -85,26 +88,37 @@
         color-mix(in srgb, var(--accent) 12%, white),
         white);
       padding: 18px;
-    }
-
-    .hero-grid{
-      display: grid;
-      grid-template-columns: 1.35fr .85fr;
-      gap: 18px;
-      align-items: start;
-    }
-
-    @media (max-width: 800px){
-      .hero-grid{ grid-template-columns: 1fr; }
+      margin-bottom: 16px;
     }
 
     h1{ margin: 0 0 6px; font-size: 1.9rem; }
-    .sub{ color: var(--muted); line-height: 1.45; }
+    .sub{ color: var(--muted); line-height: 1.45; margin: 0; }
 
+    .card{
+      background: var(--card);
+      border: 1px solid var(--border);
+      border-radius: 18px;
+      padding: 16px 18px;
+    }
+
+    h2{ margin: 0 0 10px; font-size: 1.2rem; }
+
+    .contact-grid{
+      display: grid;
+      grid-template-columns: 1fr;
+      gap: 10px;
+    }
+
+    .row .label{ color: var(--muted); font-size: .95rem; }
+    .row .value{ margin-top: 2px; }
+    .row .value a{ color: var(--accent); text-decoration: none; }
+    .row .value a:hover{ text-decoration: underline; }
+
+    /* Photo block: only photo */
     .photo{
       width: 100%;
       aspect-ratio: 4 / 5;
-      border-radius: 16px;
+      border-radius: 18px;
       border: 1px solid var(--border);
       overflow: hidden;
       background: rgba(0,0,0,.03);
@@ -116,40 +130,6 @@
       object-fit: cover;
       display: block;
     }
-
-    h2{ margin: 22px 0 10px; font-size: 1.2rem; }
-
-    .contact-grid{
-      display: grid;
-      grid-template-columns: 1fr 1fr;
-      gap: 10px 18px;
-    }
-
-    @media (max-width: 700px){
-      .contact-grid{ grid-template-columns: 1fr; }
-    }
-
-    .label{ color: var(--muted); font-size: .95rem; }
-    .value a{ color: var(--accent); text-decoration: none; }
-    .value a:hover{ text-decoration: underline; }
-
-    .pill{
-      display: inline-block;
-      padding: 7px 11px;
-      border-radius: 999px;
-      border: 1px solid var(--accent);
-      color: var(--accent);
-      background: transparent;
-      font: inherit;
-      font-size: .92rem;
-      line-height: 1;
-      cursor: pointer;
-      text-decoration: none;
-      user-select: none;
-      margin-right: 8px;
-      margin-top: 8px;
-    }
-    .pill:hover{ background: var(--accent); color: white; }
   </style>
 </head>
 
@@ -167,61 +147,49 @@
 <main class="wrap">
 
   <section class="hero">
-    <div class="hero-grid">
-      <div>
-        <h1>Nikita Safonkin</h1>
-        <div class="sub">
-          Postdoctoral researcher in mathematics (Leipzig University).<br/>
-          Noncommutative geometry, representation theory, Poisson structures, deformation/quantization.
-        </div>
-
-        <div>
-          <a class="pill" href="papers.html">Papers</a>
-          <a class="pill" href="YOUR_CV_LINK_HERE" target="_blank" rel="noopener">CV</a>
-          <a class="pill" href="https://arxiv.org/search/?searchtype=author&query=Safonkin%2C+N" target="_blank" rel="noopener">arXiv</a>
-        </div>
-      </div>
-
-      <div class="photo">
-        <!-- Put your photo at assets/me.jpg -->
-        <img src="assets/me.jpg" alt="Photo of Nikita Safonkin"
-             onerror="this.remove(); this.parentElement.style.display='grid'; this.parentElement.style.placeItems='center'; this.parentElement.innerHTML='<div style=&quot;color: var(--muted); padding: 18px; text-align:center;&quot;>Add your photo as <b>assets/me.jpg</b></div>';">
-      </div>
-    </div>
+    <h1>Nikita Safonkin</h1>
+    <p class="sub">Postdoctoral researcher · Leipzig University · Noncommutative geometry & representation theory</p>
   </section>
 
-  <h2>Contact</h2>
-  <section class="card">
-    <div class="contact-grid">
-      <div>
-        <div class="label">Email</div>
-        <div class="value"><a href="mailto:safonkin.nik@gmail.com">safonkin.nik@gmail.com</a></div>
-      </div>
-      <div>
-        <div class="label">Affiliation</div>
-        <div class="value">Leipzig University</div>
-      </div>
-      <div>
-        <div class="label">Office</div>
-        <div class="value">Add office / building (optional)</div>
-      </div>
-      <div>
-        <div class="label">Links</div>
-        <div class="value">
-          <a href="https://www.nikita-safonkin.com" target="_blank" rel="noopener">Old site</a> ·
-          <a href="https://github.com/YOUR_GITHUB_USERNAME" target="_blank" rel="noopener">GitHub</a> ·
-          <a href="https://scholar.google.com" target="_blank" rel="noopener">Google Scholar</a>
+  <section class="home-grid">
+    <!-- LEFT: Contact -->
+    <div class="card">
+      <h2>Contact</h2>
+      <div class="contact-grid">
+
+        <div class="row">
+          <div class="label">Email</div>
+          <div class="value"><a href="mailto:safonkin.nik@gmail.com">safonkin.nik@gmail.com</a></div>
         </div>
+
+        <div class="row">
+          <div class="label">Affiliation</div>
+          <div class="value">Leipzig University</div>
+        </div>
+
+        <div class="row">
+          <div class="label">Office</div>
+          <div class="value">Add office / building (optional)</div>
+        </div>
+
+        <div class="row">
+          <div class="label">Links</div>
+          <div class="value">
+            <a href="https://arxiv.org/search/?searchtype=author&query=Safonkin%2C+N" target="_blank" rel="noopener">arXiv</a>
+            · <a href="YOUR_CV_LINK_HERE" target="_blank" rel="noopener">CV</a>
+            · <a href="https://github.com/YOUR_GITHUB_USERNAME" target="_blank" rel="noopener">GitHub</a>
+            · <a href="YOUR_SCHOLAR_LINK_HERE" target="_blank" rel="noopener">Google Scholar</a>
+          </div>
+        </div>
+
       </div>
     </div>
-  </section>
 
-  <h2>Short bio</h2>
-  <section class="card">
-    <p style="margin:0; line-height:1.55">
-      Paste your bio here (copy from Google Sites). Keep it 5–10 lines: who you are, what you work on,
-      and what you’re currently excited about.
-    </p>
+    <!-- RIGHT: Photo (only photo) -->
+    <div class="photo">
+      <!-- Put your photo at assets/me.jpg -->
+      <img src="assets/me.jpg" alt="Photo of Nikita Safonkin">
+    </div>
   </section>
 
 </main>
