--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
 
   <section class="hero">
     <h1>Nikita Safonkin</h1>
-    <p class="sub">Postdoctoral researcher · Leipzig University · Noncommutative geometry & representation theory</p>
+    <p class="sub">Postdoctoral researcher at Leipzig University </p>
   </section>
 
   <section class="home-grid">
