--- a/other_writings.html
+++ b/other_writings.html
@@ -1,1 +1,37 @@
+<!doctype html>
+<html lang="en">
+<head>
+  <meta charset="utf-8"/>
+  <meta name="viewport" content="width=device-width,initial-scale=1"/>
+  <title>Other Writings · Nikita Safonkin</title>
+  <link rel="stylesheet" href="assets/style.css">
+</head>
+
+<body>
+<header class="topbar">
+  <nav class="nav">
+    <a class="brand" href="index.html">Nikita Safonkin</a>
+    <a href="index.html">Bio</a>
+    <a href="papers.html">Papers</a>
+    <a class="active" href="other_writings.html">Other Writings</a>
+  </nav>
+</header>
+
+<main class="wrap">
+  <section class="hero">
+    <h1>Other Writings</h1>
+    <p class="sub">Notes, expository texts, software, teaching materials, etc.</p>
+  </section>
+
+  <div class="card">
+    <ul class="simple-list">
+      <li><strong>Notes:</strong> <a href="#">(add link)</a></li>
+      <li><strong>Expository:</strong> <a href="#">(add link)</a></li>
+      <li><strong>Software / code:</strong> <a href="#">(add link)</a></li>
+      <li><strong>Teaching materials:</strong> <a href="#">(add link)</a></li>
+    </ul>
+  </div>
+</main>
+</body>
+</html>
 
