--- a/index.html
+++ b/index.html
@@ -5,6 +5,24 @@
   <meta name="viewport" content="width=device-width,initial-scale=1"/>
   <title>Nikita Safonkin</title>
   <link rel="stylesheet" href="assets/style.css">
+
+  <!-- Page-specific tweaks to make the hero bigger -->
+  <style>
+    .hero{
+      padding: 28px 24px;        /* bigger inner spacing */
+      margin-top: 6px;           /* a tiny breathing room under nav */
+    }
+    .hero h1{
+      font-size: 2.25rem;        /* bigger name */
+      line-height: 1.12;
+      margin-bottom: 10px;
+    }
+    .hero .sub{
+      font-size: 1.08rem;        /* slightly larger subtitle */
+      line-height: 1.4;
+      margin: 0;
+    }
+  </style>
 </head>
 
 <body>
