--- a/papers.html
+++ b/papers.html
@@ -29,7 +29,7 @@
 <main class="wrap">
   <section class="hero">
     <h1>Papers</h1>
-    <div class="sub">Abstract toggles open/closed. Links go to arXiv / PDF / Journal.</div>
+    <!--<div class="sub">Abstract toggles open/closed. Links go to arXiv / PDF / Journal.</div>-->
   </section>
 
   <ol class="papers" reversed>
