--- a/papers.html
+++ b/papers.html
@@ -28,7 +28,7 @@
 
 <main class="wrap">
   <section class="hero">
-    <h1>Papers</h1>
+    <h1>Publications and Preprints</h1>
     <!--<div class="sub">Abstract toggles open/closed. Links go to arXiv / PDF / Journal.</div>-->
   </section>
 
