--- a/index.html
+++ b/index.html
@@ -6,18 +6,17 @@
   <title>Nikita Safonkin</title>
   <link rel="stylesheet" href="assets/style.css">
 
-  <!-- Page-specific tweaks to make the hero bigger -->
+  <!-- Page-specific tweaks: make ONLY the home hero bigger (no vertical shift) -->
   <style>
-    .hero{
+    .hero-home{
       padding: 28px 24px;        /* bigger inner spacing */
-      margin-top: 6px;           /* a tiny breathing room under nav */
     }
-    .hero h1{
+    .hero-home h1{
       font-size: 2.25rem;        /* bigger name */
       line-height: 1.12;
-      margin-bottom: 10px;
+      margin: 0 0 10px;
     }
-    .hero .sub{
+    .hero-home .sub{
       font-size: 1.08rem;        /* slightly larger subtitle */
       line-height: 1.4;
       margin: 0;
@@ -37,7 +36,7 @@
 
 <main class="wrap">
 
-  <section class="hero">
+  <section class="hero hero-home">
     <h1>Nikita Safonkin</h1>
     <p class="sub">Postdoctoral researcher at Leipzig University</p>
   </section>
