--- a/index.html
+++ b/index.html
@@ -79,6 +79,19 @@
     </div>
   </section>
 
+  <!-- NEW: About box -->
+  <section style="margin-top:16px;">
+    <div class="card">
+      <h2>About</h2>
+      <p style="margin:0;">
+        I am a postdoctoral researcher in the Department of Mathematics at Leipzig University.
+        I completed my PhD at the University of Reims Champagne-Ardenne in 2023.
+        I am interested in noncommutative algebra and representation theory, and algebraic combinatorics
+        with connections to noncommutative Poisson geometry and deformation quantization.
+      </p>
+    </div>
+  </section>
+
 </main>
 </body>
 </html>
