--- a/index.html
+++ b/index.html
@@ -83,4 +83,80 @@
   <nav class="nav">
     <a class="brand" href="index.html">Nikita Safonkin</a>
     <a class="active" href="index.html">Bio</a>
-    <a href="papers.html">P
+    <a href="papers.html">Papers</a>
+    <a href="other_writings.html">Other Writings</a>
+  </nav>
+</header>
+
+<main class="wrap">
+
+  <section class="hero hero-home">
+    <h1>Nikita Safonkin</h1>
+    <p class="sub">Postdoctoral researcher at Leipzig University</p>
+  </section>
+
+  <section class="home-grid">
+
+    <!-- Contact (leftmost on desktop) -->
+    <div class="card contact-card">
+      <h2>Contact</h2>
+      <div class="contact-grid">
+
+        <div class="row">
+          <div class="label">Email</div>
+          <div class="value">safonkin.nik@gmail.com</div>
+        </div>
+
+        <div class="row">
+          <div class="label">Affiliation</div>
+          <div class="value">Leipzig University</div>
+        </div>
+
+        <div class="row">
+          <div class="label">Office / Address</div>
+          <div class="value">
+            Neues Augusteum room A409<br>
+            Augustusplatz 10<br>
+            04109 Leipzig
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="label">Links</div>
+          <div class="value">
+            <a href="https://arxiv.org/search/?searchtype=author&query=Safonkin%2C+N" target="_blank" rel="noopener">arXiv</a>
+          </div>
+        </div>
+
+      </div>
+    </div>
+
+    <!-- About (center, dominant) -->
+    <div class="card about-card">
+      <h2>About</h2>
+      <p style="margin:0 0 10px;">
+        I am a postdoctoral researcher in the Department of Mathematics at Leipzig University.
+        I completed my PhD at the University of Reims Champagne-Ardenne in 2023.
+      </p>
+      <p style="margin:0;">
+        I am interested in noncommutative algebra, representation theory, and algebraic combinatorics,
+        with connections to noncommutative Poisson geometry and deformation quantization.
+      </p>
+
+      <div class="about-links">
+        <strong>Links:</strong>
+        <a href="YOUR_CV_LINK_HERE" target="_blank" rel="noopener">CV</a>
+      </div>
+    </div>
+
+    <!-- Photo (right) -->
+    <div class="photo">
+      <img src="assets/me.jpg" alt="Photo of Nikita Safonkin">
+    </div>
+
+  </section>
+
+</main>
+</body>
+</html>
+
