--- a/papers.html
+++ b/papers.html
@@ -4,19 +4,146 @@
   <meta charset="utf-8"/>
   <meta name="viewport" content="width=device-width,initial-scale=1"/>
   <title>Papers · Nikita Safonkin</title>
-  <link rel="stylesheet" href="assets/style.css">
 
-  <!-- MathJax (keeps your LaTeX in abstracts working) -->
+  <style>
+    :root{
+      /* Put your accent color here */
+      --accent: #1155cc;
+
+      --bg: #fbfcfd;
+      --card: #ffffff;
+      --text: #111;
+      --muted: #555;
+      --border: rgba(0,0,0,.12);
+    }
+
+    *{ box-sizing: border-box; }
+    body{
+      margin: 0;
+      font-family: system-ui, -apple-system, Segoe UI, Roboto, sans-serif;
+      background: var(--bg);
+      color: var(--text);
+    }
+
+    .topbar{
+      position: sticky;
+      top: 0;
+      background: rgba(255,255,255,.9);
+      backdrop-filter: blur(10px);
+      border-bottom: 1px solid var(--border);
+    }
+    .nav{
+      max-width: 950px;
+      margin: 0 auto;
+      padding: 12px 18px;
+      display: flex;
+      gap: 12px;
+      flex-wrap: wrap;
+      align-items: center;
+    }
+    .brand{
+      font-weight: 750;
+      text-decoration: none;
+      color: var(--text);
+      margin-right: 10px;
+    }
+    .nav a{
+      text-decoration: none;
+      color: var(--muted);
+      padding: 6px 10px;
+      border-radius: 10px;
+    }
+    .nav a.active{
+      color: var(--accent);
+      border: 1px solid color-mix(in srgb, var(--accent) 35%, transparent);
+      background: color-mix(in srgb, var(--accent) 10%, white);
+    }
+
+    .wrap{
+      max-width: 950px;
+      margin: 0 auto;
+      padding: 26px 18px 60px;
+    }
+
+    .hero{
+      padding: 18px;
+      border-radius: 18px;
+      border: 1px solid color-mix(in srgb, var(--accent) 22%, transparent);
+      background: linear-gradient(135deg,
+        color-mix(in srgb, var(--accent) 12%, white),
+        white);
+    }
+    h1{ margin: 0 0 6px; font-size: 1.9rem; }
+    .sub{ color: var(--muted); }
+
+    /* Yuan-style: each paper in its own frame */
+    ol.papers{
+      list-style: none;
+      padding-left: 0;
+      margin: 16px 0 0;
+      display: grid;
+      gap: 14px;
+    }
+
+    li.paperitem{
+      background: var(--card);
+      border: 1px solid var(--border);
+      border-radius: 16px;
+      padding: 14px 16px;
+    }
+
+    .paper-title{ font-weight: 750; }
+    .paper-authors{ margin-top: 4px; color: var(--muted); }
+    .paper-venue{ margin-top: 4px; color: var(--muted); }
+
+    .paper-links{
+      display: flex;
+      gap: 8px;
+      flex-wrap: wrap;
+      margin-top: 10px;
+      margin-bottom: 10px;
+    }
+
+    .pill{
+      display: inline-block;
+      padding: 7px 11px;
+      border-radius: 999px;
+      border: 1px solid var(--accent);
+      color: var(--accent);
+      background: transparent;
+      font: inherit;
+      font-size: .92rem;
+      line-height: 1;
+      cursor: pointer;
+      text-decoration: none;
+      user-select: none;
+    }
+    .pill:hover{ background: var(--accent); color: white; }
+
+    .pill.disabled{
+      opacity: .45;
+      cursor: default;
+      pointer-events: none;
+    }
+
+    .abstract{
+      margin-top: 10px;
+      border-left: 3px solid var(--accent);
+      padding-left: 12px;
+    }
+    .is-hidden{ display: none; }
+  </style>
+
+  <!-- MathJax -->
   <script>
-    window.MathJax = {
-      tex: { macros: { Bbbk: "{\\mathbb{k}}" } }
-    };
+    window.MathJax = { tex: { macros: { Bbbk: "{\\mathbb{k}}" } } };
   </script>
   <script id="MathJax-script" async
     src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
 </head>
 
 <body>
+
 <header class="topbar">
   <nav class="nav">
     <a class="brand" href="index.html">Nikita Safonkin</a>
@@ -28,8 +155,8 @@
 
 <main class="wrap">
   <section class="hero">
-    <h1>Publications and Preprints</h1>
-    <!--<div class="sub">Abstract toggles open/closed. Links go to arXiv / PDF / Journal.</div>-->
+    <h1>Papers</h1>
+    <div class="sub">Abstract / arXiv / PDF / Journal buttons. Abstract toggles open/closed.</div>
   </section>
 
   <ol class="papers" reversed>
@@ -37,7 +164,7 @@
     <li class="paperitem">
       <div class="paper-title"><i>What is a double star-product?</i></div>
       <div class="paper-authors">N. Safonkin</div>
-      <div class="paper-venue">(2025) </div>
+      <div class="paper-venue">(2025) · arXiv:2506.00699</div>
 
       <div class="paper-links">
         <button class="pill" type="button" data-toggle="abs-1">Abstract</button>
@@ -55,13 +182,13 @@
     <li class="paperitem">
       <div class="paper-title"><i>Double Poisson brackets and involutive representation spaces</i></div>
       <div class="paper-authors">G. Olshanski, N. Safonkin</div>
-      <div class="paper-venue">Letters in Mathematical Physics 114, 33 (2024) </div>
+      <div class="paper-venue">Letters in Mathematical Physics 114, 33 (2024) · arXiv:2310.01086</div>
 
       <div class="paper-links">
         <button class="pill" type="button" data-toggle="abs-2">Abstract</button>
         <a class="pill" href="https://arxiv.org/abs/2310.01086" target="_blank" rel="noopener noreferrer">arXiv</a>
         <a class="pill" href="https://arxiv.org/pdf/2310.01086.pdf" target="_blank" rel="noopener noreferrer">PDF</a>
-        <a class="pill disabled" href="#" aria-disabled="true">Journal</a>
+        <a class="pill" href="https://link.springer.com/article/10.1007/s11005-024-01782-3" target="_blank" rel="noopener noreferrer">Journal</a>
       </div>
 
       <div id="abs-2" class="abstract is-hidden">
@@ -73,13 +200,13 @@
     <li class="paperitem">
       <div class="paper-title"><i>Remarks on Yangian-Type Algebras and Double Poisson Brackets</i></div>
       <div class="paper-authors">G. Olshanski, N. Safonkin</div>
-      <div class="paper-venue">Functional Analysis and Its Applications 57, 326–336 (2023) </div>
+      <div class="paper-venue">Functional Analysis and Its Applications 57, 326–336 (2023) · arXiv:2308.13325</div>
 
       <div class="paper-links">
         <button class="pill" type="button" data-toggle="abs-3">Abstract</button>
         <a class="pill" href="https://arxiv.org/abs/2308.13325" target="_blank" rel="noopener noreferrer">arXiv</a>
         <a class="pill" href="https://arxiv.org/pdf/2308.13325.pdf" target="_blank" rel="noopener noreferrer">PDF</a>
-        <a class="pill disabled" href="#" aria-disabled="true">Journal</a>
+        <a class="pill" href="https://link.springer.com/article/10.1134/S0016266323040068" target="_blank" rel="noopener noreferrer">Journal</a>
       </div>
 
       <div id="abs-3" class="abstract is-hidden">
@@ -90,13 +217,13 @@
     <li class="paperitem">
       <div class="paper-title"><i>Semifinite harmonic functions on the direct product of graded graphs</i></div>
       <div class="paper-authors">P. Nikitin, N. Safonkin</div>
-      <div class="paper-venue">Zapiski Nauchnykh Seminarov POMI 517, 125–150 (2022) </div>
+      <div class="paper-venue">Zapiski Nauchnykh Seminarov POMI 517, 125–150 (2022) · arXiv:2209.05901</div>
 
       <div class="paper-links">
         <button class="pill" type="button" data-toggle="abs-4">Abstract</button>
         <a class="pill" href="https://arxiv.org/abs/2209.05901" target="_blank" rel="noopener noreferrer">arXiv</a>
         <a class="pill" href="https://arxiv.org/pdf/2209.05901.pdf" target="_blank" rel="noopener noreferrer">PDF</a>
-        <a class="pill disabled" href="#" aria-disabled="true">Journal</a>
+        <a class="pill" href="https://www.mathnet.ru/php/archive.phtml?wshow=paper&jrnid=znsl&paperid=7284&option_lang=eng" target="_blank" rel="noopener noreferrer">Journal</a>
       </div>
 
       <div id="abs-4" class="abstract is-hidden">
@@ -107,13 +234,13 @@
     <li class="paperitem">
       <div class="paper-title"><i>Semifinite harmonic functions on the zigzag graph</i></div>
       <div class="paper-authors">N. Safonkin</div>
-      <div class="paper-venue">Functional Analysis and Its Applications 56:3, 52–74 (2022) </div>
+      <div class="paper-venue">Functional Analysis and Its Applications 56:3, 52–74 (2022) · arXiv:2110.01508</div>
 
       <div class="paper-links">
         <button class="pill" type="button" data-toggle="abs-5">Abstract</button>
         <a class="pill" href="https://arxiv.org/abs/2110.01508" target="_blank" rel="noopener noreferrer">arXiv</a>
         <a class="pill" href="https://arxiv.org/pdf/2110.01508.pdf" target="_blank" rel="noopener noreferrer">PDF</a>
-        <a class="pill disabled" href="#" aria-disabled="true">Journal</a>
+        <a class="pill" href="https://link.springer.com/article/10.1134/S0016266322030042" target="_blank" rel="noopener noreferrer">Journal</a>
       </div>
 
       <div id="abs-5" class="abstract is-hidden">
@@ -124,13 +251,13 @@
     <li class="paperitem">
       <div class="paper-title"><i>Semifinite Harmonic Functions on Branching Graphs</i></div>
       <div class="paper-authors">N. Safonkin</div>
-      <div class="paper-venue">Journal of Mathematical Sciences (New York) 261, 669–686 (2022) </div>
+      <div class="paper-venue">Journal of Mathematical Sciences (New York) 261, 669–686 (2022) · arXiv:2108.07850</div>
 
       <div class="paper-links">
         <button class="pill" type="button" data-toggle="abs-6">Abstract</button>
         <a class="pill" href="https://arxiv.org/abs/2108.07850" target="_blank" rel="noopener noreferrer">arXiv</a>
         <a class="pill" href="https://arxiv.org/pdf/2108.07850.pdf" target="_blank" rel="noopener noreferrer">PDF</a>
-        <a class="pill disabled" href="#" aria-disabled="true">Journal</a>
+        <a class="pill" href="https://link.springer.com/article/10.1007/s10958-022-05779-y" target="_blank" rel="noopener noreferrer">Journal</a>
       </div>
 
       <div id="abs-6" class="abstract is-hidden">
@@ -141,13 +268,13 @@
     <li class="paperitem">
       <div class="paper-title"><i>Semifinite Harmonic Functions on the Gnedin–Kingman Graph</i></div>
       <div class="paper-authors">N. Safonkin</div>
-      <div class="paper-venue">Journal of Mathematical Sciences (New York) 255, 132–142 (2021) </div>
+      <div class="paper-venue">Journal of Mathematical Sciences (New York) 255, 132–142 (2021) · arXiv:2103.02257</div>
 
       <div class="paper-links">
         <button class="pill" type="button" data-toggle="abs-7">Abstract</button>
         <a class="pill" href="https://arxiv.org/abs/2103.02257" target="_blank" rel="noopener noreferrer">arXiv</a>
         <a class="pill" href="https://arxiv.org/pdf/2103.02257.pdf" target="_blank" rel="noopener noreferrer">PDF</a>
-        <a class="pill disabled" href="#" aria-disabled="true">Journal</a>
+        <a class="pill" href="https://link.springer.com/article/10.1007/s10958-021-05356-9" target="_blank" rel="noopener noreferrer">Journal</a>
       </div>
 
       <div id="abs-7" class="abstract is-hidden">
@@ -162,9 +289,9 @@
 
       <div class="paper-links">
         <button class="pill" type="button" data-toggle="abs-8">Abstract</button>
-        <a class="pill disabled" href="#" aria-disabled="true">arXiv</a>
+        <!-- arXiv button removed (as requested) -->
         <a class="pill disabled" href="#" aria-disabled="true">PDF</a>
-        <a class="pill disabled" href="#" aria-disabled="true">Journal</a>
+        <a class="pill" href="https://link.springer.com/article/10.3103/S1066369X18110014" target="_blank" rel="noopener noreferrer">Journal</a>
       </div>
 
       <div id="abs-8" class="abstract is-hidden">
