--- a/papers.html
+++ b/papers.html
@@ -155,8 +155,7 @@
 
 <main class="wrap">
   <section class="hero">
-    <h1>Papers</h1>
-    <div class="sub">Abstract / arXiv / PDF / Journal buttons. Abstract toggles open/closed.</div>
+    <h1>Publications & Preprints</h1>
   </section>
 
   <ol class="papers" reversed>
